[gd_scene load_steps=6 format=2]

[ext_resource path="res://models/shotgun shell.tscn" type="PackedScene" id=1]
[ext_resource path="res://guns/ShotgunShell.gd" type="Script" id=2]
[ext_resource path="res://audio/Audio3D.tscn" type="PackedScene" id=3]
[ext_resource path="res://audio/gun/Shell Dropping.wav" type="AudioStream" id=4]

[sub_resource type="ConvexPolygonShape" id=1]
points = PoolVector3Array( 0, -1, -1, 0, -1, -1, 0, -1, -1, -7.39836e-09, -0.538359, -0.799163, -7.39836e-09, -0.538359, -0.799163, -7.39836e-09, -0.538359, -0.799163, -7.39836e-09, -0.538359, -0.799163, 0.951057, -1, -0.309017, 0.951057, -1, -0.309017, 0.951057, -1, -0.309017, 0.76005, -0.538359, -0.246955, 0.76005, -0.538359, -0.246955, 0.76005, -0.538359, -0.246955, 0.76005, -0.538359, -0.246955, 0.587785, -1, 0.809017, 0.587785, -1, 0.809017, 0.587785, -1, 0.809017, 0.469736, -0.538359, 0.646537, 0.469736, -0.538359, 0.646537, 0.469736, -0.538359, 0.646537, 0.469736, -0.538359, 0.646537, -0.587785, -1, 0.809017, -0.587785, -1, 0.809017, -0.587785, -1, 0.809017, -0.469737, -0.538359, 0.646537, -0.469737, -0.538359, 0.646537, -0.469737, -0.538359, 0.646537, -0.469737, -0.538359, 0.646537, -0.951056, -1, -0.309017, -0.951056, -1, -0.309017, -0.951056, -1, -0.309017, -0.760049, -0.538359, -0.246955, -0.760049, -0.538359, -0.246955, -0.760049, -0.538359, -0.246955, -0.760049, -0.538359, -0.246955, 0.951057, -0.538359, -0.309017, 0.951057, -0.538359, -0.309017, 0.951057, -0.538359, -0.309017, 0.951057, -0.538359, -0.309017, 0, -0.538359, -1, 0, -0.538359, -1, 0, -0.538359, -1, 0, -0.538359, -1, 0.587785, -0.538359, 0.809017, 0.587785, -0.538359, 0.809017, 0.587785, -0.538359, 0.809017, 0.587785, -0.538359, 0.809017, -0.587785, -0.538359, 0.809017, -0.587785, -0.538359, 0.809017, -0.587785, -0.538359, 0.809017, -0.587785, -0.538359, 0.809017, -0.951056, -0.538359, -0.309017, -0.951056, -0.538359, -0.309017, -0.951056, -0.538359, -0.309017, -0.951056, -0.538359, -0.309017, 0.76005, 0.107269, -0.246955, 0.76005, 0.107269, -0.246955, -8.37046e-09, 0.107269, -0.799163, -8.37046e-09, 0.107269, -0.799163, 0.469736, 0.107269, 0.646537, 0.469736, 0.107269, 0.646537, -0.469737, 0.107269, 0.646537, -0.469737, 0.107269, 0.646537, -0.760049, 0.107269, -0.246955, -0.760049, 0.107269, -0.246955, 0.76005, 0.107269, -0.246955, 0.76005, 0.107269, -0.246955, -8.37046e-09, 0.107269, -0.799163, -8.37046e-09, 0.107269, -0.799163, 0.469736, 0.107269, 0.646537, 0.469736, 0.107269, 0.646537, -0.469737, 0.107269, 0.646537, -0.469737, 0.107269, 0.646537, -0.760049, 0.107269, -0.246955, -0.760049, 0.107269, -0.246955, 0.76005, 2.37482, -0.246955, 0.76005, 2.37482, -0.246955, 0.76005, 2.37482, -0.246955, 1.17714e-09, 2.37482, -0.799163, 1.17714e-09, 2.37482, -0.799163, 1.17714e-09, 2.37482, -0.799163, 0.469736, 2.37482, 0.646537, 0.469736, 2.37482, 0.646537, 0.469736, 2.37482, 0.646537, -0.469737, 2.37482, 0.646537, -0.469737, 2.37482, 0.646537, -0.469737, 2.37482, 0.646537, -0.760049, 2.37482, -0.246955, -0.760049, 2.37482, -0.246955, -0.760049, 2.37482, -0.246955 )

[node name="ShotgunShell" type="RigidBody"]
transform = Transform( 1, 0, 0, 0, 0.707107, -0.707107, 0, 0.707107, 0.707107, 0, 0, 0 )
collision_layer = 0
mass = 0.5
gravity_scale = 1.5
continuous_cd = true
contacts_reported = 1
contact_monitor = true
angular_velocity = Vector3( 15, 0, 0 )
script = ExtResource( 2 )
impulse_magnitude = 3.0

[node name="shotgun shell" parent="." instance=ExtResource( 1 )]
transform = Transform( 0.04, 0, 0, 0, 0.04, 0, 0, 0, 0.04, 0, 0, 0 )

[node name="CollisionShape" type="CollisionShape" parent="."]
transform = Transform( 0.04, 0, 0, 0, -6.51683e-09, 0.04, 0, -0.04, -6.51683e-09, 0, 0, 0 )
shape = SubResource( 1 )

[node name="Timer" type="Timer" parent="."]
process_mode = 0
wait_time = 5.0
autostart = true

[node name="DropAudio" parent="." instance=ExtResource( 3 )]
stream = ExtResource( 4 )
[connection signal="body_entered" from="." to="." method="_on_ShotgunShell_body_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]

[editable path="shotgun shell"]
